--- a/views/assessmentReport.html
+++ b/views/assessmentReport.html
@@ -13,6 +13,8 @@
 
         <script>
         $(document).ready(function(){
+            alert("Sorry, You cannot Access Assessment Report at this moment... Please try again later.");
+            return;
 //            $("td").on("click",function(e){
 //                //console.log("clicked"+e.result);
 //            });
